# leptos-struct-table

./: .gitattributes  .gitignore  CHANGELOG.md  Cargo.toml  README.md  hero.afdesign  test_examples.sh
.github/actions/rust_toolchain/: action.yml
.github/workflows/: cd.yml  ci.yml  tests.yml
examples/: README.md  all.sh
examples/bootstrap/: Cargo.toml  README.md  index.html  style.css
examples/bootstrap/src/: main.rs
examples/column_index_type/: Cargo.toml  README.md
examples/column_index_type/src/: main.rs
examples/column_order_and_visibility/: Cargo.toml  README.md  index.html
examples/column_order_and_visibility/src/: main.rs  tailwind.rs
examples/column_order_and_visibility/style/: output.css
examples/custom_renderers_svg/: Cargo.toml  README.md
examples/custom_renderers_svg/src/: main.rs  renderers.rs
examples/custom_row_renderer/: Cargo.toml  README.md
examples/custom_row_renderer/src/: main.rs
examples/custom_type/: Cargo.toml  README.md
examples/custom_type/src/: main.rs
examples/editable/: Cargo.toml  README.md
examples/editable/src/: main.rs  renderer.rs
examples/editable/style/: output.css
examples/generic/: Cargo.toml  README.md
examples/generic/src/: main.rs
examples/getter/: Cargo.toml  README.md
examples/getter/src/: main.rs
examples/i18n/: Cargo.toml  README.md  build.rs
examples/i18n/locales/: de.json  en.json
examples/i18n/src/: main.rs
examples/paginated_rest_datasource/: Cargo.toml  README.md  index.html  style.css
examples/paginated_rest_datasource/src/: data_provider.rs  main.rs  models.rs  renderer.rs
examples/pagination/: Cargo.toml  README.md  index.html
examples/pagination/src/: data_provider.rs  main.rs  models.rs  tailwind.rs
examples/pagination/style/: output.css
examples/rest_datasource/: Cargo.toml  README.md  style.css
examples/rest_datasource/src/: main.rs
examples/row_value_renderer/: README.md
examples/row_value_renderer/src/: main.rs
examples/selectable/: Cargo.toml  README.md
examples/selectable/src/: main.rs  tailwind.rs
examples/selectable/style/: output.css
examples/server_function/: Cargo.toml  README.md
examples/server_function/private/: book-data.json
examples/server_function/src/: app.rs  error_template.rs  fileserv.rs  lib.rs  main.rs  server.rs
examples/server_function/style/: main.scss
examples/serverfn_sqlx/: .gitignore  Cargo.toml  README.md  db.sqlite3  db.sqlite3-shm  db.sqlite3-wal  tailwind.config.js
examples/serverfn_sqlx/src/: app.rs  classes.rs  data_provider.rs  database.rs  error_template.rs  fileserv.rs  handlers.rs  lib.rs  main.rs
examples/simple/: Cargo.toml  README.md
examples/simple/src/: main.rs
examples/table_grouping/: README.md  Trunk.toml
examples/table_grouping/src/: grouping.rs  main.rs  tailwind.rs
examples/tailwind/: Cargo.toml  README.md
examples/tailwind/src/: main.rs  tailwind.rs
examples/tailwind/style/: output.css
examples/virt_dev/: Cargo.toml  README.md  index.html  style.css
examples/virt_dev/src/: main.rs
leptos-struct-table-macro/: Cargo.toml
leptos-struct-table-macro/src/: lib.rs  models.rs  table.rs
src/: cell_value.rs  chrono.rs  column_enum.rs  data.rs  data_provider.rs  data_storage.rs  decimal.rs  display_strategy.rs  error.rs  events.rs  lib.rs  loaded_rows.rs  refresh_controller.rs  reload_controller.rs  row_reader.rs  row_renderer.rs  rust_decimal.rs  scroll_container.rs  selection.rs  sorting.rs  table_row.rs  time.rs  uuid.rs
src/class_providers/: bootstrap.rs  mod.rs  tailwind.rs
src/components/: cell.rs  head.rs  mod.rs  renderer_fn.rs  row.rs  table_content.rs  tbody.rs  thead.rs  thead_drag.rs
src/components/cell/: chrono.rs  mod.rs
