[package]
name = "leptos-struct-table"
version = "0.15.0-beta1"
edition = "2021"
authors = ["Marc-Stefan Cassola"]
categories = ["gui", "web-programming", "wasm"]
description = "Generate a complete batteries included leptos data table component from a struct definition."
exclude = ["examples/", "tests/"]
keywords = ["leptos", "table", "data-sheet", "data-grid"]
license = "MIT OR Apache-2.0"
readme = "README.md"
repository = "https://github.com/Synphonyte/leptos-struct-table"

[dependencies]
leptos = { version = "0.8.0" }
leptos-struct-table-macro = { version = "0.13.0-beta2" }
leptos-use = { version = "0.16.0-beta" }
rust_decimal = { version = "1.35", optional = true }
chrono = { version = "0.4", optional = true }
send_wrapper = "0.6"
serde = "1"
time = { version = "0.3", optional = true, features = ["formatting"] }
uuid = { version = "1", optional = true, features = [] }
thiserror = "1"
web-sys = "0.3.67"
wasm-bindgen = "0.2"

[features]
chrono = ["dep:chrono"]
uuid = ["dep:uuid"]
rust_decimal = ["dep:rust_decimal"]
time = ["dep:time"]
i18n = ["leptos-struct-table-macro/i18n"]

[package.metadata."docs.rs"]
all-features = true
