[package]
name = "leptos-struct-table-macro"
version = "0.1.1"
edition = "2021"
authors = ["Marc-Stefan Cassola"]
description = "Macros for the leptos-struct-table crate."
exclude = ["examples/", "tests/"]
license = "MIT OR Apache-2.0"
#readme = "README.md"
repository = "https://github.com/Synphonyte/leptos-struct-table"

[lib]
proc-macro = true

[dependencies]
syn = "1"
quote = "1.0"
darling = "0.14"
proc-macro2 = "1.0"
heck = "0.4"