[package]
edition = "2021"
name = "custom_row_renderer"
version = "0.1.0"

[dependencies]
chrono = { version = "0.4" }
console_error_panic_hook = "0.1"
console_log = "1"
leptos = { version = "0.8", features = ["csr"] }
leptos-struct-table = { path = "../..", features = ["chrono", "uuid"] }
log = "0.4"
uuid = { version = "1.19", features = ["js", "v4"] }

[dev-dependencies]
wasm-bindgen = "0.2"
wasm-bindgen-test = "0.3.0"
web-sys = "0.3"
