[package]
name = "i18n"
version = "0.1.0"
edition = "2021"

[dependencies]
leptos = { version = "0.8", features = ["csr"] }
leptos-struct-table = { path = "../..", features = ["chrono", "uuid", "time", "i18n"] }
leptos_i18n = { version = "0.5", features = ["csr"] }
chrono = { version = "0.4", features = [] }
console_error_panic_hook = "0.1"
time = { version = "0.3" }
uuid = { version="1.16.0", features=["v4", "js"]}
console_log = "1"
log = "0.4"
getrandom = { version = "0.2", features = ["js"] }

[package.metadata.leptos-i18n]
default = "en"
locales = ["en", "de"]
