[package]
name = "paginated_rest_datasource"
version = "0.1.0"
edition = "2021"

[dependencies]
leptos = { version = "0.6", features = ["nightly", "csr"] }
leptos-use = "0.10"
leptos-struct-table = { path = "../..", features = ["chrono"] }
console_error_panic_hook = "0.1"
console_log = "1"
log = "0.4"
serde = { version = "1", features = ["derive"] }
async-trait = "0.1"
gloo-net = { version = "0.5.0", features = ["http"] }

[dev-dependencies]
wasm-bindgen = "0.2"
wasm-bindgen-test = "0.3.0"
web-sys = "0.3"