[package]
name = "server_function"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
async-trait = "0.1"
axum = { version = "0.6.4", optional = true }
cfg-if = "1"
chrono = { version = "0.4", features = ["serde"] }
console_error_panic_hook = "0.1"
console_log = "1"
leptos = { version = "0.3.1", default-features = false, features = ["serde"] }
leptos-struct-table = { path = "../..", features = ["chrono"] }
leptos_axum = { version = "0.3.1", optional = true }
leptos_meta = { version = "0.3.1", default-features = false }
leptos_router = { version = "0.3.1", default-features = false }
log = "0.4"
reqwasm = "0.5"
serde = "1"
serde_json = "1.0"
tokio = { version = "1.25", optional = true }
tower = { version = "0.4", optional = true }
tower-http = { version = "0.4", features = ["fs"], optional = true }
tracing = { version = "0.1", optional = true }
uuid = { version = "1.3", features = ["v4", "js"] }
wasm-bindgen = "0.2"
simple_logger = "4.2"
thiserror = "1.0.40"
http = "0.2"

[features]
hydrate = ["leptos/hydrate", "leptos_meta/hydrate", "leptos_router/hydrate"]
ssr = [
    "dep:axum", 
    "dep:tokio", 
    "dep:tower", 
    "dep:tower-http", 
    "dep:leptos_axum", 
    "leptos/ssr", 
    "leptos_meta/ssr", 
    "leptos_router/ssr", 
    "dep:tracing"
]

[package.metadata.cargo-all-features]
denylist = [
    "axum",
    "tokio",
    "tower",
    "tower-http",
    "leptos_axum",
]
skip_feature_sets = [["ssr", "hydrate"]]

[package.metadata.leptos]
# The name used by wasm-bindgen/cargo-leptos for the JS/WASM bundle. Defaults to the crate name
output-name = "server_function"

# The site root folder is where cargo-leptos generate all output. WARNING: all content of this folder will be erased on a rebuild. Use it in your server setup.
site-root = "target/site"

# The site-root relative folder where all compiled output (JS, WASM and CSS) is written
# Defaults to pkg
site-pkg-dir = "pkg"

# [Optional] The source CSS file. If it ends with .sass or .scss then it will be compiled by dart-sass into CSS. The CSS is optimized by Lightning CSS before being written to <site-root>/<site-pkg>/app.css
style-file = "style/main.scss"
# Assets source dir. All files found here will be copied and synchronized to site-root.
# The assets-dir cannot have a sub directory with the same name/path as site-pkg-dir.
#
# Optional. Env: LEPTOS_ASSETS_DIR.
assets-dir = "public"

# The IP and port (ex: 127.0.0.1:3000) where the server serves the content. Use it in your server setup.
site-addr = "127.0.0.1:3000"

# The port to use for automatic reload monitoring
reload-port = 3001

#  The browserlist query used for optimizing the CSS.
browserquery = "defaults"

# Set by cargo-leptos watch when building with that tool. Controls whether autoreload JS will be included in the head
watch = false

# The environment Leptos will run in, usually either "DEV" or "PROD"
env = "DEV"

# The features to use when compiling the bin target
#
# Optional. Can be over-ridden with the command line parameter --bin-features
bin-features = ["ssr"]

# If the --no-default-features flag should be used when compiling the bin target
#
# Optional. Defaults to false.
bin-default-features = false

# The features to use when compiling the lib target
#
# Optional. Can be over-ridden with the command line parameter --lib-features
lib-features = ["hydrate"]

# If the --no-default-features flag should be used when compiling the lib target
#
# Optional. Defaults to false.
lib-default-features = false
