[package]
name = "simple"
version = "0.1.0"
edition = "2021"

[dependencies]
leptos = { version = "0.8", features = ["csr"] }
leptos-struct-table = { path = "../..", features = ["chrono", "uuid", "time"] }
chrono = { version = "0.4", features = [] }
console_error_panic_hook = "0.1"
time = { version = "0.3" }
uuid = { version = "1.8", features = ["v4"] }
console_log = "1"
log = "0.4"
getrandom = { version = "0.2", features = ["js"] }

[dev-dependencies]
wasm-bindgen = "0.2"
wasm-bindgen-test = "0.3.0"
web-sys = "0.3"
