[package]
edition = "2021"
name = "simple"
version = "0.1.0"

[dependencies]
chrono = { version = "0.4", features = [] }
console_error_panic_hook = "0.1"
console_log = "1"
leptos = { version = "0.8", features = ["csr"] }
leptos-struct-table = { path = "../..", features = ["chrono", "time", "uuid"] }
log = "0.4"
time = { version = "0.3" }
uuid = { version = "1", features = ["js", "v4"] }

[dev-dependencies]
wasm-bindgen = "0.2"
wasm-bindgen-test = "0.3"
web-sys = "0.3"

[patch.crates-io]
leptos-use.path = "../../../leptos-use"
